--- a/public/scss/partials/_nav.scss
+++ b/public/scss/partials/_nav.scss
@@ -160,7 +160,7 @@ ul.nav.vertical {
 		@include transition(width 0.8s ease, border-right 0.8s ease);
 
 		-webkit-perspective: 1000;
-		-webkit-transform:translate3d(0,0,0);
+		-webkit-backface-visibility: hidden;
 	}
 }
 
